vbnc/vbnc/tests/Errors/30451-2.vb
Option Infer Off
Class E
    Public Shared Sub Main()
        For i = 1 To 2

        Next
    End Sub
End Class